# application-observability

./: .gitignore  README.md  docker-compose.yml  profile.example.yaml  pyproject.toml
docs/superpowers/specs/: 2026-04-20-application-observability-design.md
grafana/dashboards/: funnel.json  summary.json  timeseries.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: sqlite.yml
launchd/: com.silas.application-observability.plist
sync/: add_job.py  classifier.py  db.py  eml_import.py  gmail_client.py  graph_client.py  rules.yaml  sync.py
sync/autoapply/: browser.py  config.py  filter.py  gate.py  models.py
sync/autoapply/adapters/: ashby.py  base.py  dispatcher.py  form_utils.py  greenhouse.py
sync/autoapply/sources/: base.py  simplify_repo.py
tests/: test_add_job.py  test_autoapply_adapter_base.py  test_autoapply_ashby.py  test_autoapply_browser.py  test_autoapply_config.py  test_autoapply_dispatcher.py  test_autoapply_filter.py  test_autoapply_gate.py  test_autoapply_greenhouse.py  test_autoapply_sources.py  test_classifier.py  test_db.py  test_eml_import.py  test_gmail_client.py  test_graph_client.py  test_sync.py
tests/fixtures/: ashby_sample.html  greenhouse_sample.html  sample_emails.json  simplify_new_grad_snippet.md
