[project]
name = "application-observability"
version = "0.1.0"
description = "Local job-application tracking from Gmail to Grafana"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "google-api-python-client>=2.120",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "freezegun>=1.4",
]
autoapply = [
    "playwright>=1.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
